docs(openapi): udpate applications openapi spec
